// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component NbActionPending should render a specific message when there is no action to sync 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <NbActionPending>
    <FormattedMessage
      defaultMessage="{nbAction, plural, =0 {synced} one {# action to sync} other {# actions to sync}}"
      description="Nb action pending"
      id="nbAction"
      values={
        Object {
          "nbAction": 0,
        }
      }
    >
      synced
    </FormattedMessage>
  </NbActionPending>
</IntlProvider>
`;

exports[`Component NbActionPending should render a specific message when there is one action to sync 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <NbActionPending>
    <FormattedMessage
      defaultMessage="{nbAction, plural, =0 {synced} one {# action to sync} other {# actions to sync}}"
      description="Nb action pending"
      id="nbAction"
      values={
        Object {
          "nbAction": 1,
        }
      }
    >
      1 action to sync
    </FormattedMessage>
  </NbActionPending>
</IntlProvider>
`;

exports[`Component NbActionPending should render a specific message when there is several action to sync 1`] = `
<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en-US"
  messages={Object {}}
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
  timeZone="Asia/Kuala_Lumpur"
>
  <NbActionPending>
    <FormattedMessage
      defaultMessage="{nbAction, plural, =0 {synced} one {# action to sync} other {# actions to sync}}"
      description="Nb action pending"
      id="nbAction"
      values={
        Object {
          "nbAction": 3,
        }
      }
    >
      3 actions to sync
    </FormattedMessage>
  </NbActionPending>
</IntlProvider>
`;
